	breaks the current API but avoids those cases where the SLight is changed
	via the reference but does not update necessary internal states.

- Added yield() method to IrrlichtDevice which allows to pause the Irrlicht process for
	a very short time. This allows other processes to execute without a major
	penalty for the Irrlicht application.

- B3D changes by Luke: 
	Texture scaling bugfix, support for alpha blending, 
	new option to normalise weights, animation code optimization, fixed memory leak

- Fonts:
	Changed original IGUIFont to IGUIFontASCII and added options for more fonts
	Added CGUIFontMultiTexture for UTF16 fonts which must span many textures, loads from XML
	Started a font tool for creating the new XML fonts, including generating vector fonts
	(currently not backward compatible with old fonts, only works for Win2K+, some bugs still)

- GUI:
	GUI Serialization with loadGUI and saveGUI, and serializable custom GUI elements via factories

	Started a GUI Editor as a GUI element factory example (work in progress)

	New IGUIElement functions: isSubElement & setSubElement for child elements created by their parents 
	(eg. a scrollbar on a list box). Set it if you don't want an element to be serialized

	New GUI event, EGET_ELEMENT_FOCUSED

	GUI environment ELEMENT_FOCUS_LOST event now sets the element as the caller, focus_lost events 
	are now usually passed to parent elements, so elements now check if they are the caller before 
	updating (so users can catch focus lost events without them being eaten by the elements)

	Buttons and checkboxes now only activate when the mouse is released over them.

	Windows mouse-up events are now caught outside the window, so mouse coords may now be negative.
	Could cause problems with draggable user windows, as they may now be dragged off screen.

- ROUNDING_ERROR is now ROUNDING_ERROR_32 or ROUNDING_ERROR_64

- Material TextureWrap:
	Enable Irrlicht to change TextureAddress Mode (Wrapping=Default, and Clamping)